Plot code for exploring covariates

--- a/docs/paper_outlines/JDM_Figures_Tables.tex
+++ b/docs/paper_outlines/JDM_Figures_Tables.tex
@@ -174,7 +174,8 @@ Specific spatial pattens for density of cod, haddock and whiting (Figure 7):
 \end{itemize}
 
 \begin{figure}[!ht]
-	\includegraphics[width	=\linewidth]{../../plots/Density_Differences}
+	\centering
+	\includegraphics[width	= \linewidth]{../../plots/Density_Differences}
 	\label{fig:DensityDiff}
 	\caption{Plot of difference between normalised density estimates in
 		2015 for selected species. The proportion of each species in
