--- a/data/Data_Processing_and_Exploration.Rnw
+++ b/data/Data_Processing_and_Exploration.Rnw
@@ -33,7 +33,7 @@
 
 \begin{document}
 
-<<Setup, echo=FALSE, comment = F, warning = F, results = 'hide'>>=
+<<Setup, include = FALSE, message = FALSE, warning = F, results = 'hide', tidy = TRUE>>=
 library(knitr) # markdown
 library(ggplot2) # for plotting
 library(maps) # spatial plots
@@ -42,7 +42,8 @@ library(stargazer) # For nice model output
 library(gridExtra) # for multi-panel ggplots
 library(mgcv) # for gams
 set.seed(1)
-opts_chunk$set(size="footnotesize")
+opts_chunk$set(size="footnotesize", message = FALSE, warning = FALSE, tidy = TRUE,
+               tidy.opts=list(width.cutoff=60))
 @
 
 \maketitle
@@ -84,7 +85,7 @@ parameters to estimate:
 The raw data looks as follows for cod, megrim, anglerfishes, haddock, whiting,
 hake, plaice and sole:
 
-<<LWt, echo = F, fig.cap = 'Estimates of individual weights at length for the gadoid species. Colours indicate individual years measurements', fig.width = 8, fig.height = 8>>=
+<<LWt, fig.cap = 'Estimates of individual weights at length for the gadoid species. Colours indicate individual years measurements', fig.width = 8, fig.height = 8>>=
 
 # Read data and remove records without corresponding weight
 DF <- read.csv(file.path('DATRAS', 'SMALK_EVHOE.csv')) # read data
@@ -116,7 +117,7 @@ To simplify the fitting procedure, the von bertalanffy relationship in equation
 
 \vspace{1cm}
 
-<<LWt2, echo = F, fig.caption = 'Length and weight measurements on a log scale',fig.width = 8, fig.height = 8>>=
+<<LWt2, fig.caption = 'Length and weight measurements on a log scale',fig.width = 8, fig.height = 8>>=
 
 DF$lWt <- log(DF$IndWgt)
 DF$lL  <- log(DF$LngtClass)
@@ -131,7 +132,7 @@ A linear model with species and year as factors was fit using the \textit{glm}
 function in the base R package. We separate the roundfish and flatfish due to
 the different morphological forms affecting the length weight relationship:
 
-<<GLM fit, results = 'asis', comment = F>>=
+<<GLM fit, results = 'asis'>>=
 
 gads  <- c('Gadus morhua', 'Melanogrammus aeglefinus', 
 	   'Merluccius merluccius', 'Merlangius merlangus')
@@ -168,7 +169,7 @@ For anglerfish, as there is insufficient data for a fit a model (few data
 points for piscatorius, no data points for budegassa), we use estimates from
 fishbase: $a = 0.03330$, $b= 2.766$.
 
-<<Prediction1, echo = F>>=
+<<Prediction1>>=
 
 lop <- c(a = 0.03330, b = 2.766)
 
@@ -272,7 +273,7 @@ Where $R$ is the mean Radius of the Earth, 6 341 km. \\
 
 Total records were: \\
 
-<<Distance calcs, echo = F, message = F, fig.align = 'center'>>=
+<<Distance calcs, fig.align = 'center'>>=
 load(file.path('DATRAS', 'CelticSurveyData.RData')) # pre-downloaded data, HH is station, HL is catch
 
 kable(group_by(HH, Survey, HaulVal) %>% summarise(n = n()))
@@ -319,7 +320,7 @@ To calculate the swept area, we first have to estimate the door spread for any
 records where it's missing. There were only 5 records with missing door spread,
 but use the predicted door spread for all records. \\
 
-<<DoorSpread, fig.width = 5, fig.height = 5, echo = F, warning = F, message = F, fig.align = 'center'>>=
+<<DoorSpread, fig.width = 5, fig.height = 5,fig.align = 'center'>>=
 
 # Covert numeric variables so we can explore the covariates
 HH$SweepLngt   <- as.numeric(HH$SweepLngt) ;  HH$HaulDur     <- as.numeric(HH$HaulDur)
@@ -346,7 +347,7 @@ ggplot(HH, aes(x = Depth, y = DoorSpread)) + geom_point() +
 There may be another covariate affecting doorspread, indicated by the
 clustering of some of the data...lets look at some of them.
 
-<<DoorSpread2, fig.width = 5, fig.height = 5, echo = F, fig.align = 'center',warning = F, comment = F>>=
+<<DoorSpread2, fig.width = 5, fig.height = 5, fig.align = 'center'>>=
 
 p1 <- ggplot(HH, aes(x = Depth, y = DoorSpread)) + geom_point(aes(colour = factor(DoorWgt))) +
 theme_bw() + ggtitle('..with door weight') + theme(legend.position = 'top')
@@ -368,7 +369,7 @@ There looks to be a relationship between depth and doorspread where it
 increases to around 200 m and then flattens out, but with a covariate effect.
 We will model this relationship with a gam. 
 
-<<Doorspread4, results = 'asis', echo = T, warning = F, comment = F>>=
+<<Doorspread3, results = 'asis'>>=
 
 # Without covariate
 m1 <- gam(DoorSpread ~ s(Depth), data = HH)
@@ -386,7 +387,7 @@ m3 <- gam(DoorSpread ~ s(Depth) + factor(DoorWgt) * Warplngt *
 
 @
 
-<<Doorspread5, results = 'asis', echo = F, warning = F, fig.align = 'center'>>=
+<<Doorspread4, results = 'asis', fig.align = 'center'>>=
 
 kable(AIC(m1, m2, m3))
 
@@ -398,7 +399,7 @@ kable(AIC(m1, m2, m3))
 @
 
 Full model looks best, but let's check the residuals against the covariates
-<<Residualcheck, fig.width = 4, fig.height = 4, echo = F, fig.align = 'center',warning = F, comment = F>>=
+<<Residualcheck, fig.width = 4, fig.height = 4, fig.align = 'center'>>=
 
 HHresid <- filter(HH, !is.na(DoorWgt), !is.na(Warplngt), 
 		  !is.na(Warpdia),  !is.na(SweepLngt), 
@@ -433,7 +434,7 @@ grid.arrange(p1, p2, p3, p4, ncol = 2)
 Residuals look OK, so let's look at a Q-Q plot, half-normal plot and check the
 predictions against the measurements...
 
-<<Doorspread3, fig.width = 4, fig.height = 4, echo = F, fig.align = 'center',warning = F, comment = F>>=
+<<Doorspread5, fig.width = 4, fig.height = 4, fig.align = 'center'>>=
 
 qq.gam(m3, main = 'Q-Q plot')
 
@@ -472,7 +473,7 @@ NAs without available covariates). Then, we calculate swept area based on:
 Where CF is a correction factor for the efficiency of the gear, taken from Piet
 et al as 0.38 for otter trawl gears. \textcolor{red}{ADD REF}
 
-<<SweptArea, echo = F, fig.align = 'center', fig.height = 5, fig.width = 5>>=
+<<SweptArea, fig.align = 'center', fig.height = 5, fig.width = 5>>=
 
 HH$SweptArea <- HH$Dist * HH$PredSpread/1000
 
@@ -516,7 +517,7 @@ The length data were converted to weight through the following process:
 The output from an estimation of the length at minimum marketing size for
 anglerfishes was as follows:
 
-<<AddingWeights, echo = F, warning = F, comment = F, fig.width = 4, fig.height = 4, fig.align= 'center'>>=
+<<AddingWeights, fig.width = 4, fig.height = 4, fig.align= 'center'>>=
 
 ## Add species names
 load(file.path('DATRAS', 'DatrasSpeciesCodes.RData'))
@@ -670,7 +671,7 @@ were:
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-<<Cefas_Survey_Processing, echo = F, warning = F, message = F, results = 'hide'>>=
+<<Cefas_Survey_Processing, results = 'hide'>>=
 
 FSS <- read.csv(file = file.path('CEFAS', 'WesternSurveys_V20160905.dat'))
 
@@ -898,7 +899,7 @@ The following section details some exploratory plots from the cleaned data.
 This guides the final dataset used to fit the VAST model.
 
 
-<<Exploratory Plots1, echo = F, message = F>>=
+<<Exploratory Plots1>>=
 
 ##################################################
 
@@ -945,7 +946,7 @@ area and concerns about its impact on selectivity. \\
 
 \begin{landscape}
 
-<<Survey locations, out.width = '1\\linewidth', fig.width = 12, fig.height = 9,echo = F>>=
+<<Survey locations, out.width = '1\\linewidth', fig.width = 12, fig.height = 9>>=
 Stations <- Wt[!duplicated(paste(Wt$Survey, Wt$Year, Wt$Lon, Wt$Lat)),]
 
 yrs <- sort(unique(Stations$Year))
@@ -976,7 +977,7 @@ effort is also undertaken in the first quarter
 The majority of survey effort is in the fourth quarter, though some survey
 effort is also undertaken in the first quarter. \\ 
 
-<<Survey by year, echo = F, fig.width = 6, fig.height = 4, fig.align = 'center'>>=
+<<Survey by year,fig.width = 6, fig.height = 4, fig.align = 'center'>>=
 
 kable(table(Stations$Year, Stations$Survey))
 
@@ -988,7 +989,7 @@ print(ggplot(surveyyrs[surveyyrs$value !=0,], aes(x = Var2, y = Var1)) +
 	ggtitle('Number of Stations Per Survey Per Year'))
 @
 
-<<Survey by month, echo = F, fig.width = 6, fig.height = 4, fig.align = 'center'>>=
+<<Survey by month, fig.width = 6, fig.height = 4, fig.align = 'center'>>=
 surveymo <- reshape2::melt(table(Stations$Month, Stations$Year))
 
 print(ggplot(surveymo[surveymo$value !=0,], aes(x = Var2, y = Var1)) +
@@ -998,7 +999,7 @@ print(ggplot(surveymo[surveymo$value !=0,], aes(x = Var2, y = Var1)) +
 
 @
 
-<<Survey effort by year, echo = F, fig.width = 6, fig.height = 4, fig.align = 'center'>>=
+<<Survey effort by year, fig.width = 6, fig.height = 4, fig.align = 'center'>>=
 
 surveyno <- group_by(Stations, Survey, Year) %>% summarise(n= n())
 
@@ -1013,7 +1014,7 @@ WCGFS, IE-IGFS, EVHOE and WCGFS use otter trawl gears, while the CARLHELMAR,
 NWGFS, Q1SWBEAM use beam trawl gears. The WCGFS initially used hour long tows,
 but changes to 30 min tows consistent with other surveys later in the series. \\ 
 
-<<Survey swept area, echo = F, fig.width = 6, fig.height = 4, fig.align = 'center'>>=
+<<Survey swept area, fig.width = 6, fig.height = 4, fig.align = 'center'>>=
 boxplot(Stations$SweptArea ~ Stations$Survey, xlab = 'Survey Series', ylab =
 	'Swept Area (km2)', main = 'Swept Area by Survey', cex.axis = 0.5)
 axis(2, las = 1)
@@ -1036,7 +1037,7 @@ the time series, though this has been more consistent since 1996. The mean has
 generally been around 51 degrees.
 
 
-<<Survey Spatial extent, echo = F, fig.width = 6, fig.height = 4, fig.align = 'center'>>=
+<<Survey Spatial extent, fig.width = 6, fig.height = 4, fig.align = 'center'>>=
 
 Lats_Lons <- group_by(Stations, Year) %>% summarise(minLon = min(Lon), maxLon = max(Lon), meanLon = mean(Lon),
 						    minLat = min(Lat), maxLat = max(Lat), meanLat = mean(Lat))
@@ -1056,7 +1057,7 @@ The following details the total catch by year, by survey. As can be seen, the
 IE-IGFS, EVHOE, WCGFS, Q4SWIBTS and Q1SWBEAM catch reasonable quantities of
 gadoids, while the CARLHELMAR and NWGFS catch very little. \\
 
-<<TotalCatch, echo = F, fig.width = 6, fig.height = 8, fig.align = 'center'>>=
+<<TotalCatch, fig.width = 6, fig.height = 8, fig.align = 'center'>>=
 
 tot <- group_by(Wt, Survey, Species, Year) %>% summarise(Kg = sum(Kg))
 
@@ -1071,7 +1072,7 @@ We need to check on the proportion of zeros in the data (for the delta
 model)...
 
 
-<<ZeroCheck, echo = F, fig.width = 12, fig.height = 8, fig.align = 'center'>>=
+<<ZeroCheck, fig.width = 12, fig.height = 8, fig.align = 'center'>>=
 
 ## Proportion of zeros for each species/year
 yrs <- sort(unique(Wt$Year))
@@ -1107,7 +1108,7 @@ species.
 
 \begin{landscape}
 
-<<Survey catches, out.width = '1\\linewidth', fig.width = 12, fig.height = 9,echo = F>>=
+<<Survey catches, out.width = '1\\linewidth', fig.width = 12, fig.height = 9>>=
 
 spp <- sort(unique(Wt$Species))
 
@@ -1128,7 +1129,7 @@ print(ggplot() +
 
 @
 
-<<CPUE, out.width = '1\\linewidth', fig.width = 12, fig.height = 9,echo = F>>=
+<<CPUE, out.width = '1\\linewidth', fig.width = 12, fig.height = 9>>=
 
 Wt$HaulDur <- as.numeric(as.character(Wt$HaulDur))
 
