Text on manuscript

--- a/docs/write_up/Figures.tex
+++ b/docs/write_up/Figures.tex
@@ -18,10 +18,10 @@
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width = \linewidth]{Omega1Epsilon2_Correlations}
+	\includegraphics[width = \linewidth]{Omega1Omega2_Correlations}
 	\label{fig:1}
 	\caption{Inter-species correlations for (a) spatial encounter
-		probability over all years and (b) Spatio-temporal density.
+		probability over all years and (b) spatial density.
 		Species-groups are clustered into three groups based on a
 		hierarchical clustering method with NOTE: Final figure will
 		have non-sig correlations blanked}
@@ -30,8 +30,27 @@
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width = \linewidth]{DensityFigureswithCCRevised2}
+	\includegraphics[width=\linewidth]{PCAstyle_Plots_Spatial_FishPics_Leg}
 	\label{fig:2}
+	\caption{Position of each species-group on the first two loading axes from the
+	factor analysis for (a) spatio-temporal encounter probability and (b)
+	spatio-temporal density}
+\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+	\includegraphics[width=\linewidth]{SpatialFactorLoadingsOmega1}
+	\label{fig:3}
+	\caption{Spatial Factor loadings for the average spatial encounter
+		probability on the first 3 factors}
+\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+	\includegraphics[width = \linewidth]{DensityFigureswithCCRevised2}
+	\label{fig:4}
 	\caption{Differences in spatial density for pairs of species and
 		expected catch rates for two different gears at three different
 	locations}
@@ -40,20 +59,10 @@
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width=\linewidth]{PCAstyle_Plots_Spatial_FishPics_Leg}
-	\label{fig:3}
-	\caption{Position of each species-group on the first two loading axes from the
-	factor analysis}
+	\includegraphics[width=\linewidth]{TechnicalEfficiency}
+	\label{fig:5}
+	\caption{Example of technical efficiency space}
 \end{center}
 \end{figure}
-
-\begin{figure}
-\begin{center}
-	\includegraphics[width=\linewidth]{SpatialFactorLoadingsOmega1}
-	\label{fig:4}
-	\caption{Spatial Factor loadings}
-\end{center}
-\end{figure}
-
 
 \end{document}
