--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -15,18 +15,16 @@
 \setlist{itemsep=1pt} % This controls spacing between items in the lists
 \setlength\parindent{0pt} % Removes all indentation from paragraphs
 
-% change references to parenthesis (from square brackets)
-\renewcommand\citeleft{(}
-\renewcommand\citeright{)}
-
 % figures here	
 \graphicspath{figures/}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title{Using joint species distribution models to inform mixed fishery
-management}
+	management OR Managing fisheries through understanding of fish
+	community dynamics}
 
-\author{Paul J. Dolder$^1$ \& James T. Thorson$^2$ \& Cóilín Minto$^1$}
+\author{Paul J. Dolder$^1$ \& James T. Thorson$^2$ \& Cóilín Minto$^1$ \& A.N.
+Others}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
@@ -40,40 +38,165 @@ management}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{linenumbers}
 
-\begin{abstract}
-Mixed fisheries are where more than one species are caught together in the same
-fishing operation. Mixed fishery interactions are the pre-eminent management
-issue in fisheries managed by landing quotas, as over-quota catches of weaker
-stocks leads to overexploitation when pursuing landings of healthy stocks.
-Decoupling exploitation of weaker stocks from healthy stocks is vital if mixed
-fisheries are to be managed efficiently, yet remains a challenge due to
-co-occurrence at fine spatial and temporal scales. We apply a joint species
-distribution model (VAST) to the nine most important demersal fish species
-caught in the Celtic Sea fisheries, each separated into juvenile and adult size
-classes. The model integrates data from seven fisheries independent surveys,
-takes account of correlations among species-group spatio-temporal distributions
-and abundances and makes use of habitat and depth covariates to predict spatial
-density estimates consistent with the resolution of the data. Model outputs are
-consistent with stock-level trends abundances over time from international
-assessments, yet also provide detailed insight into species co-occurrence and
-the strength of associations in space and time. We use the outputs to draw
-inference on the challenges in separating catches of key commercial demersal
-fish in moving to the EU landing obligation.
+\begin{abstract} 
+Mixed fisheries, where more than one species are caught together in the same
+fishing operation, are the predominant type of fishery worldwide. Managed in
+the EU through single stock landings quotas, mixed fisheries have resulted in
+overexploitation of weaker stock as over quota catches continue in fisheries
+pursuing catches of healthy stocks. As EU fisheries management moves to systems
+where all fish caught are counted against the quota from 2019 (the 'Landings
+obligation') this burden is reversed. The risk instead is that mixed fisheries
+will have lower productivity as quota for healthier stocks remains uncaught in
+order to protect the weaker stocks unless management can decouple exploitation
+their exploitation, an objective fast becoming an important goal for fisheries
+sustainability.  A potential mechanism for decoupling exploitation is spatial
+management, but this has remained technically challenging due to co-occurrence
+of species at fine spatial and temporal scales and a lack of understanding of
+how this is driven by community dynamics.  We sought to understanding community
+dynamics in the Celtic Sea by applying a joint species distribution model
+(VAST) to the nine most important demersal fish species, each separated into
+juvenile and adult size classes.  \\
+
+Clear common drivers for spatial distribution patterns emerge for three species
+groups (roundfish flatfish and shelf species) and, while abundance varies from
+year to year, the same species groups are commonly found in higher densities
+together. This indicates common drivers of distribution and the scale of the
+challenge in separating catches within the species-groups using spatial
+management measures, having important implications for management of the mixed
+fisheries under the EU landings obligation.
+
+[263 words]
+
 \end{abstract}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section*{Text}
+\section*{}
 
+\subsection{Mixed fisheries and the EU landings obligation} 
 
+Fisheries management has the goal of maximising food production from capture
+fisheries (known as 'maximum sustainable yield (MSY)) while protecting all
+components of the ecosystem from over-exploitation. In mixed fisheries, the
+predominant type of fishery worldwide, several fish species are caught together
+in the same net or fishing operation; if managed by individual quotas and
+different species have divergent conservation goals, overexploitation of the
+weaker species can result while fishers continue to catch more healthy species
+and throw back ('discard') the species for which they have no quota.
+
+The sustainability of European fisheries have been hampered by this 'mixed
+fishery problem' for decades, but a paradigm shift is due to be introduced
+under the EU Common Fisheries Policy (CFP) reform of 2012
+\cite{EuropeanParliamentandCounciloftheEuropeanUnion2013}. Here, two
+significant management changes have been introduced. First, all fish stocks
+must be fished so as to be able to produce their MSY by 2020; second, all fish
+that are caught are due to be counted against the respective stock quota by
+2019. The changes are expected to contribute to attainment of Good
+Environmental Status (GES) under the European Marine Strategy Framework
+Directive (MSFD; \cite{EuropeanParliament2008}) and move towards an Ecosystem
+based approach to fisheries management. However, these changes are particularly
+challenging for those operating in mixed fisheries, as unless fishers can avoid
+catch of unwanted species they will have to stop fishing when reaching their
+first restrictive quota. The potential cost to fishers in terms of
+under-utilised quota is significant \cite{Hoff2010a, Ulrich2016} and there is
+strong incentive to mitigate such losses \cite{Condie2013, Condie2013a}.
+
+The ability of fishers to align their catch with available quota depends on
+being able to exploit target species while avoiding unwanted catch. Methods by
+which fishers can alter their fishing patterns include by switching fishing
+method (e.g. trawling to netting) and changing technical gear characteristics
+(e.g. introducing escapement panels in nets), or the timing and location of
+fishing activity \cite{Fulton2011b, vanPutten2012a}.
+
+Spatio-temporal management measures (such as time-limited fishery closures)
+have been applied in the past to reduce unwanted catch with varying degrees of
+success (e.g. \cite{Needle2011, Holmes2011, Beare2010, Dinmore2003} while
+move-on rules have also been proposed or implemented to influence catch rates
+of particular vulnerable species in order to reduce or eliminate discards
+\cite{Gardner2008, Dunn2011, Dunn2014a}. However, such measures have generally
+been targeted at individual species without considering associations and
+interactions among several species. The design of spatio-temporal management
+measures which aim to all exploitation of healthy stocks while supporting
+weaker stocks requires understanding of the spatio-temporal population dynamics
+of fish communities. 
+
+[420 words]
+
+\subsection{Incorporating spatial modelling advances into a single framework}
+
+We employ a geostatistical Vector Autoregressive Spatio-temporal model (VAST)
+which includes i) a factor analysis decomposition to describe trends in
+spatio-temporal dynamics of the different species as a function of \textit{n}
+latent variables. This allows for inference of the distribution and density of
+poorly sampled species through association with the modelled factors and
+identification of community dynamics and drivers. ii) Spatio-temporal encounter
+probability and catch rates are modelled separately to allow separate
+characterisation of distributions and densities, iii) Gaussian Markov Random
+Fields (GMRFs) are used to capture spatial and temporal correlations within and
+among species for both encounter probability and catch rates, iv) this is set
+in a mixed modelling framework to allow estimation of fixed effects such as
+gear catch rate differences while integrating across random effects.
+
+[128 words]
+
+\subsection{Dynamics of Celtic Sea fisheries}
+
+We use the fisheries in the Celtic Sea as a case study to understand how fish
+community dynamics affect the ability of mixed fisheries to change the
+composition of their catch through spatial and spatio-temporal avoidance. The
+Celtic Sea is a temperate sea where a large number of species make up the
+commercial catches (MORE SPECIFIC).
+
+We parameterise our spatio-temporal model using catch data from seven fisheries
+independent surveys undertaken over the period 1990 - 2015 [INSERT REF TO TABLE
+WITH SURVEYS AS SUPPL] and include nine of the main commercial species:
+Atlantic cod (\textit{Gadus morhua}), Atlantic haddock (\textit{Melanogrammus
+	aeglefinus}), Atlantic whiting (\textit{Merlangius merlangus}),
+European Hake(\textit{Merluccius merluccius}), white-bellied anglerfish
+(\textit{Lophius piscatorius}), black-bellied anglerfish (\textit{Lophius
+	budegassa}), megrim (\textit{Lepidorhombus whiffiagonis}), European
+Plaice (\textit{Pleuronectes platessa}) and Common Sole (\textit{Solea solea}).
+Each species was separated into juvenile and adult size classes based on their
+legal minimum conservation reference size (INSERT REF TO TABLE WITH SPP SIZES
+AS SUPPL). 
+
+[154 words]
+
+\subsection{Pearson's correlations show three distinct species associations:}
+Pearson correlation coefficients for the average spatial encounter probability
+\ref{fig:1}(a) show clear strong associations between adult and juvenile size
+classes for all species (\textgreater 0.75 for all species except Hake, 0.56).
+Among species, hierarchical clustering groups three distinct species groups.
+Roundfish (cod, haddock, whiting) are found closely associated with each other:
+correlations for adult cod with adult haddock and adult whiting were 0.73 and
+0.5 respectively, while adult haddock with adult whiting was 0.63. Flatfish
+(plaice and sole) are also strongly correlated with adult plaice and sole
+having a coefficient of 0.75. The final group is principally species found
+along the shelf edge (hake, megrim and both anglerfish species) with the
+megrims more strongly associated with the budegassa anglerfish species (0.88).
+
+Pearsons correlation coefficients for 
 
 \section*{Methods}
+
+The model integrates data from seven fisheries independent surveys taking
+account of correlations among species-group spatio-temporal distributions and
+abundances to predict spatial density estimates consistent with the resolution
+of the data. 
+
+[[Model outputs are consistent with stock-level trends abundances over time
+from international assessments, yet also provide detailed insight into species
+co-occurrence and the strength of associations in space and time.  We use the
+outputs to draw inference on the challenges in separating catches of key
+commercial demersal fish in moving to the EU landing obligation.]]
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{linenumbers}
 \newpage
 \Urlmuskip=0mu plus 1mu\relax
-%\bibliographystyle{apalike}
-%\small{\bibliography{fleet_dynamics}}
+\bibliographystyle{naturemag}
+\small{\bibliography{JSDM}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -92,10 +215,10 @@ fish in moving to the EU landing obligation.
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width = \linewidth]{Omega1Epsilon2_Correlations}
+	\includegraphics[width = \linewidth]{Omega1Omega2_Correlations}
 	\label{fig:1}
 	\caption{Inter-species correlations for (a) spatial encounter
-		probability over all years and (b) Spatio-temporal density.
+		probability over all years and (b) spatial density.
 		Species-groups are clustered into three groups based on a
 		hierarchical clustering method with NOTE: Final figure will
 		have non-sig correlations blanked}
@@ -104,8 +227,27 @@ fish in moving to the EU landing obligation.
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width = \linewidth]{DensityFigureswithCCRevised2}
+	\includegraphics[width=\linewidth]{PCAstyle_Plots_Spatial_FishPics_Leg}
 	\label{fig:2}
+	\caption{Position of each species-group on the first two loading axes from the
+	factor analysis for (a) spatio-temporal encounter probability and (b)
+	spatio-temporal density}
+\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+	\includegraphics[width=\linewidth]{SpatialFactorLoadingsOmega1}
+	\label{fig:3}
+	\caption{Spatial Factor loadings for the average spatial encounter
+		probability on the first 3 factors}
+\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+	\includegraphics[width = \linewidth]{DensityFigureswithCCRevised2}
+	\label{fig:4}
 	\caption{Differences in spatial density for pairs of species and
 		expected catch rates for two different gears at three different
 	locations}
@@ -114,20 +256,15 @@ fish in moving to the EU landing obligation.
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width=\linewidth]{PCAstyle_Plots_Spatial_FishPics_Leg}
-	\label{fig:3}
-	\caption{Position of each species-group on the first two loading axes from the
-	factor analysis}
+	\includegraphics[width=\linewidth]{TechnicalEfficiency}
+	\label{fig:5}
+	\caption{Example of technical efficiency space}
 \end{center}
 \end{figure}
 
 
-\begin{figure}
-\begin{center}
-	\includegraphics[width=\linewidth]{SpatialFactorLoadingsOmega1}
-	\label{fig:4}
-	\caption{Spatial Factor loadings}
-\end{center}
-\end{figure}
+
 
 \end{document}
+
+
