Updates to manuscript and figures

--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -163,18 +163,60 @@ AS SUPPL).
 
 \subsection{Pearson's correlations show three distinct species associations:}
 Pearson correlation coefficients for the average spatial encounter probability
-\ref{fig:1}(a) show clear strong associations between adult and juvenile size
-classes for all species (\textgreater 0.75 for all species except Hake, 0.56).
-Among species, hierarchical clustering groups three distinct species groups.
-Roundfish (cod, haddock, whiting) are found closely associated with each other:
-correlations for adult cod with adult haddock and adult whiting were 0.73 and
-0.5 respectively, while adult haddock with adult whiting was 0.63. Flatfish
-(plaice and sole) are also strongly correlated with adult plaice and sole
-having a coefficient of 0.75. The final group is principally species found
-along the shelf edge (hake, megrim and both anglerfish species) with the
+Figure \ref{fig:1}(a) show clear strong associations between adult and juvenile
+size classes for all species (\textgreater 0.75 for all species except Hake,
+0.56).  Among species, hierarchical clustering groups three distinct species
+groups; Roundfish (cod, haddock, whiting) are found closely associated with
+each other, correlations for adult cod with adult haddock and adult whiting
+were 0.73 and 0.5 respectively, while adult haddock with adult whiting was
+0.63. Flatfish (plaice and sole) are also strongly correlated with adult plaice
+and sole having a coefficient of 0.75. The final group is principally species
+found along the shelf edge (hake, megrim and both anglerfish species) with the
 megrims more strongly associated with the budegassa anglerfish species (0.88).
 
-Pearsons correlation coefficients for 
+Pearson's correlation coefficients for the average density Figure
+\ref{fig:1}(b) show higher catches of cod are associated with higher catches of
+haddock (0.58) and whiting (0.47), as well as the two anglerfish species (0.71
+for piscatorius and 0.44 for budegassa) and hake (0.73). Similarly, plaice and
+sole are closely associated (0.31) and higher catches of one would expect to
+see higher catches of the other, but also higher catches of some juvenile size
+classes of roundfish (whiting and haddock) and anglerfish species.
+
+[210 words]
+
+\subsection{Spatial drivers of average species distributions and densities:}
+The factor analysis decomposes the dominant spatial patterns driving
+differences in encounter probability and abundance. Figure \ref{fig:2} shows
+the first three factors for (a) average spatial encounter probability and (b)
+average density. These three factors account of 83.4 \% and 69.2 \% of the
+variance explained, respectively. A clear spatial pattern can been seen both
+for encounter probability and density, with a positive association with the
+first factor in the inshore North Easterly part of the Celtic Sea in into the
+Bristol Channel and Western English Channel, moving to a negative association
+offshore in the south-westerly waters. On the second factor a North / South
+split can be seen for encounter probability while density is more driven by a
+positive association in the deeper westerly waters. The opposite is evident on
+the third factor, with a positive association with the Easterly waters for
+encounter probability and negative with the westerly waters, while density is
+driven by a North / South split.
+
+[169 words]
+
+\subsection{How species relationships and spatial patterns have changed over
+	time:}
+Pearson's correlation coefficients for spatio-temporal encounter probability
+show weaker but still significant....UPDATE WHEN SEs ARE AVAILABLE
+
+Spatial patterns are less clear for spatio-temporal encounter probability or
+spatio-temporal densities, showing subtle changes each year (Figure not shown,
+should be in a supplementary?). However, if we plot the first two axes of the
+factor loadings for the spatio-temporal encounter probability and densities
+Figure \ref{fig:3} a clear species association pattern emerges. 
+
+\subsection{Implications for species avoidance in mixed fisheries under the
+	landings obligation}
+
+
 
 \section*{Methods}
 
@@ -227,20 +269,22 @@ commercial demersal fish in moving to the EU landing obligation.]]
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width=\linewidth]{PCAstyle_Plots_Spatial_FishPics_Leg}
+	\includegraphics[width=\linewidth]{SpatialFactorLoadingsOmega1Omega2}
 	\label{fig:2}
-	\caption{Position of each species-group on the first two loading axes from the
-	factor analysis for (a) spatio-temporal encounter probability and (b)
-	spatio-temporal density}
+	\caption{Spatial Factor loadings for (a) the average spatial encounter
+		probability and (b) the average density,  on the first 3
+		factors. Red: positive association to the factor, Blue:
+		negative association}
 \end{center}
 \end{figure}
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width=\linewidth]{SpatialFactorLoadingsOmega1}
+	\includegraphics[width=\linewidth]{PCAstyle_Plots_Spatial_FishPics_Leg}
 	\label{fig:3}
-	\caption{Spatial Factor loadings for the average spatial encounter
-		probability on the first 3 factors}
+	\caption{Position of each species-group on the first two loading axes from the
+	factor analysis for (a) spatio-temporal encounter probability and (b)
+	spatio-temporal density}
 \end{center}
 \end{figure}
 
