--- a/docs/write_up/Figures.tex
+++ b/docs/write_up/Figures.tex
@@ -30,22 +30,25 @@
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width=\linewidth]{PCAstyle_Plots_Spatial_FishPics_Leg}
+	\includegraphics[width=0.8\linewidth]{SpatialFactorLoadingsOmega1Omega2}
 	\label{fig:2}
+	\caption{Spatial Factor loadings for (a) the average spatial encounter
+		probability and (b) the average density,  on the first 3
+		factors. Red: positive association to the factor, Blue:
+		negative association}
+\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+	\includegraphics[width=\linewidth]{PCAstyle_Plots_Spatial_FishPics_Leg}
+	\label{fig:3}
 	\caption{Position of each species-group on the first two loading axes from the
 	factor analysis for (a) spatio-temporal encounter probability and (b)
 	spatio-temporal density}
 \end{center}
 \end{figure}
 
-\begin{figure}
-\begin{center}
-	\includegraphics[width=\linewidth]{SpatialFactorLoadingsOmega1}
-	\label{fig:3}
-	\caption{Spatial Factor loadings for the average spatial encounter
-		probability on the first 3 factors}
-\end{center}
-\end{figure}
 
 \begin{figure}
 \begin{center}
